--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,30 +68,6 @@ nav {
   text-align: right;
 }
 
-.modal-top button {
-    color: #FCFBFB;
-    font-size: 250%;
-    margin-right: 5px;
-}
-
-.modal-content {
-    height: 90vh;
-    background-color: rgba(113, 116, 117, 0.8);
-}
-
-.modal-content ul {
-    line-height: 3;
-    font-size: 150%;
-    list-style-type: none;
-    letter-spacing: 4px;
-}
-
-.modal-content a {
-  font-family: "Quicksand", sans-serif;
-  color:#FCFBFB;  
-  text-decoration: none;
-}
-
 #home-text {
   height: 90vh;
   padding-top: 10vh;
@@ -124,73 +100,35 @@ header h2 {
   height: 100vh;
 }
 
-#about-text {
-  height: 90vh;
-  padding-top: 15vh;
+.section-title {
+    height: 15vh;
+    display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-#about-text h2 {
+.section-title h2 {
     text-align: center;
     font-family: "Raleway", sans-serif;
     color: #434546;
 }
 
-#about-text ul {
-    padding: 0;
-}
-
-#about-text li {
-    font-size: 280%;
-    text-align: center;
-    list-style: none;
-    color: #434546;
-    text-shadow: 2px 2px#B8B9BA;
+#about-text {
+  height: 75vh;
+  padding-top: 0;
 }
 
 /* ---------------------------------------------About animation */
 
-.icon {
-    display: inline-block;
-    vertical-align: middle;
+.svg-sm > line {
+    stroke: #434546; 
+    stroke-width: 2;
 }
 
-.icon--plus > path {
-    fill: #717475;
-    stroke: #717475;
-    stroke-width: 0.05;
-    stroke-linejoin: round;
-    
-}
-
-#line-a {
-    stroke-dasharray: 1px; 
-      stroke-dashoffset: 1px;
-    animation: move 2s linear;
-      animation-fill-mode: forwards;
-}
-
-#line-b {
-    stroke-dasharray: 1px; 
-      stroke-dashoffset: 1px;
-    animation: move 2s linear;
-    animation-delay: 1s;
-      animation-fill-mode: forwards;
-}
-
-#line-c {
-    stroke-dasharray: 1px; 
-      stroke-dashoffset: 1px;
-    animation: move 2s linear;
-    animation-delay: 2s;
-      animation-fill-mode: forwards;
-}
-
-#line-d {
-    stroke-dasharray: 1px; 
-      stroke-dashoffset: 1px;
-    animation: move 2s linear;
-    animation-delay: 3s;
-      animation-fill-mode: forwards;
+.svg-sm > circle {
+    stroke: #434546; 
+    stroke-width: 2;
+    fill: #434546;
 }
 
 #line-e {
@@ -214,43 +152,35 @@ animation: 1s fadeIn;
   visibility: hidden;
 }
 
-#icon-b {
-    animation-delay: 1s;
-animation: 1s fadeIn;
-  animation-fill-mode: forwards;
-  
-  visibility: hidden;
+/* ---------------------------------------------Modals */
+
+.modal-top button {
+    color: #FCFBFB;
+    font-size: 250%;
+    margin-right: 5px;
 }
 
-#icon-c {
-    animation-delay: 2s;
-animation: 1s fadeIn;
-  animation-fill-mode: forwards;
-  
-  visibility: hidden;
+.modal-content {
+    height: 90vh;
+    background-color: #717475;
 }
 
-#icon-d {
-    animation-delay: 3s;
-animation: 1s fadeIn;
-  animation-fill-mode: forwards;
-  
-  visibility: hidden;
+.modal-content ul {
+    line-height: 3;
+    font-size: 150%;
+    list-style-type: none;
+    letter-spacing: 4px;
 }
 
-#icon-e {
-    animation-delay: 4s;
-animation: 1s fadeIn;
-  animation-fill-mode: forwards;
-  
-  visibility: hidden;
+.modal-content a {
+  font-family: "Quicksand", sans-serif;
+  color:#FCFBFB;  
+  text-decoration: none;
 }
 
-@keyframes fadeIn {
-  99% {
-    visibility: hidden;
-  }
-  100% {
-    visibility: visible;
-  }
+.modal-top img {
+    margin: 15px;
+    height: 20vh;
+    border: solid 2px #E7E0DA;
+    border-radius: 50%;
 }
