--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,8 @@ nav {
   height: 10vh;
 }
 
+
+
 #circle-cover-bg {
   display: block;
   /* float: left; */
@@ -33,7 +35,7 @@ nav {
 }
 
 #menu-md {
-  font-size: 100%;
+  font-size: 120%;
   list-style-type: none;
   letter-spacing: 4px;
   text-align: right;
@@ -97,6 +99,11 @@ header h2 {
   height: 100vh;
 }
 
+#about2-section {
+  margin: 0 15px 0px;
+  height: 100vh;
+}
+
 .section-title {
   height: 15vh;
   margin-bottom: 20px;
@@ -116,6 +123,61 @@ header h2 {
 .section-text {
   height: 75vh;
   padding-top: 0;
+}
+
+/* ---------------------------------------------About Full Page */
+
+.section-text img {
+    display: block;
+    margin: 0 auto;
+    height: 25vh;
+    border: solid 2px #434546;
+    border-radius: 50%;
+}
+
+h3, h4 {
+    text-align: center;
+    color:  #434546;
+    font-family: "Raleway", sans-serif;
+}
+
+blockquote, p {
+    margin: 15px;
+    font-family: "Quicksand", sans-serif;
+    color:  #434546;
+    text-align: justify;
+}
+
+/* ---------------------------------------------Skills section */
+
+.progress {
+    position: relative;
+    height: 25px;
+    margin-bottom: 4px;
+}
+
+.progress-type {
+    position: absolute;
+    left: 0px;
+    font-weight: 400;
+    font-family: "Raleway", sans-serif;
+    padding: 3px 30px 2px 10px;
+}
+
+.progress-type.color-a {
+    color:  #E7E0DA;
+}
+
+.progress-bar.color-a {
+    background-color: #434546;
+}
+
+.progress-type.color-b {
+    color:  #434546;
+}
+
+.progress-bar.color-b {
+    border: 2px solid  #434546;
 }
 
 /* ---------------------------------------------About animation */
@@ -305,7 +367,7 @@ line.vertical  {
 
 .modal-title h3, .modal-title h4 {
     text-align: right;
-    color: #FCFBFB;
+    color:  #FCFBFB;
     font-family: "Raleway", sans-serif;
 }
 
