--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,7 +41,7 @@ nav {
   width: 10vh;
   height: 0;
   padding-bottom: 10vh;
-  border: 4px solid#36454f;
+  border: 3px solid#36454f;
   border-radius: 50%;
 }
 
@@ -184,7 +184,7 @@ header blockquote {
   display: flex;
   align-items: flex-end;
   justify-content: center;
-  border-top: solid 2px #0892d0;
+  border-top: solid 3px #0892d0;
 }
 
 .section-title h2, h3, h4, h5 {
@@ -402,6 +402,25 @@ blockquote, p {
     background-color:  #f1f3f5;
 }
 
+/* ---------------------------------------------Portfolio */
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 100%;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.card img {
+    width: 100%;
+}
+
+.caption {
+  padding: 2px 16px;
+}
 
 /* ---------------------------------------------Modals */
 
